- Changed: ToolKit and MineDetector are now always available, no matter which version is beeing played
- Changed: You may encounter divers at naval mines side missions now
- Changed: MHQs should now be added automatically to the list of vehicles which can load an ammo box at an ammo point
- Changed: Removed T-14 from RHS version (seems too be not ready yet)
- Fixed: If a player can escape jail with a mod like enhanced movement put him back again into the jail if he is too far away; if he does it 10 times then the player will be banned for the running session
- Fixed: Object compositions were placed half in the ground on CUP Winter Chernarus
- Fixed: Event triggers now have a defined height to prevent flyovers from triggering ground events, by longtimegamer
- Fixed: In ranked mode players with rank private ended up with just one uniform in Virtual Arsenal
- Fixed: incorrect logic in maintarget event selection, improved dashboard list and line breaks, by longtimegamer
- Fixed: Camouflage script had the wrong stance in it, "STANCE" instead of "STAND"
- Fixed: ToolKit was missing in the unsung version in VA
- Fixed: Choppers exploded on the carrier in the carrier version (yet again)
- Fixed: Fog, overcast and date can be set again by Zeus
- Fixed: In the CUP Chernarus 2020 version Land_trafostanica_velka objects do not exist near Zelenogorsk which broke the side mission
- Fixed: TFAR radios are now no longer removed when another mod version like CUP is played
- Fixed: ACE medical items were not available in ranked mode
- Fixed: Line breaks were broken in hintChat function
- Fixed: Main target creation in the TT version was broken
- Fixed: In the TT version the 3D icon above dropped ammo boxes (drop called by squad leader) was also visible for the enemy
- Fixed: Friendly shooting at MHQ was displayed for the enemy side too instead of only for the side the MHQ belongs to
- Fixed: MHQs in the Malden TT version could not load ammo boxes at ammo points