@@ -33,6 +33,7 @@ ATTENTION: The following mission file(s) has/have changed: TT Malden, Altis Bluf
 - Changed: You may encounter divers at naval mines side missions now
 - Changed: MHQs should now be added automatically to the list of vehicles which can load an ammo box at an ammo point
 - Changed: Removed T-14 from RHS version (seems too be not ready yet)
+- Changed: MHQ dialog no longer closes when Deploy or Load/Drop Ammobox button is pressed
 - Fixed: If a player can escape jail with a mod like enhanced movement put him back again into the jail if he is too far away; if he does it 10 times then the player will be banned for the running session
 - Fixed: Object compositions were placed half in the ground on CUP Winter Chernarus
 - Fixed: Event triggers now have a defined height to prevent flyovers from triggering ground events, by longtimegamer
